
7.07  2016-09-18

7.06  2016-09-17
  - Fixed bug where Mojolicious::Renderer would wrap text in layouts.
  - Fixed a few test description encoding bugs in Test::Mojo.

7.05  2016-08-29
  - Fixed bug in Mojo::IOLoop::Subprocess where EV would steal the subprocess
    exit status.

7.04  2016-08-28
  - Added EXPERIMENTAL support for performing computationally expensive
    operations in subprocesses, without blocking the event loop. (jberger, sri)
  - Added EXPERIMENTAL module Mojo::IOLoop::Subprocess. (jberger, sri)
  - Added EXPERIMENTAL subprocess method to Mojo::IOLoop. (jberger, sri)
  - Improved many methods in Mojolicious::Controller to die more gracefully if
    the connection has already been closed.
  - Fixed bug where Mojo::UserAgent would try to follow redirects for CONNECT
    requests.

7.03  2016-08-17
  - Fixed packaging errors.

7.02  2016-08-17
  - Fixed bugs in Mojo::Loader and Mojo::Util where the DATA handle would be
    mentioned in error messages. (jberger, kiwiroy, sri)

7.01  2016-08-01
  - Improved support for systemd.
  - Fixed a bug in Mojo::Server::Prefork where PID files would not contain a
    newline character.

7.0  2016-07-19
  - Code name "Doughnut", this is a major release.
  - Removed Mojolicious::Plugin::Charset.
  - Removed authority method from Mojo::URL.
  - Removed squish method from Mojo::ByteStream.
  - Removed squish function from Mojo::Util.
  - Removed support for smart whitespace trimming from all_text and text methods
    in Mojo::DOM.
  - Updated jQuery to version 3.1.0.
  - Improved Mojo::URL not to include the userinfo part when generating URLs, as
    recommended by the URL Living Standard.
  - Improved Mojolicious::Plugin::Config to no longer log which files have been
    loaded.
  - Fixed trailing slash bug in Mojo::URL.
  - Fixed a few whitespace bugs in Mojo::DOM.
  - Fixed attribute selector bug in Mojo::DOM::CSS. (Akron)
  - Fixed a bug causing headers with zero length values to be ignored by the get